<resources>
    <string name="app_name">Calculadora</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="igual">=</string>
    <string name="parentesis1">(</string>
    <string name="parentesis2">)</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="del">DEL</string>
    <string name="ac">AC</string>
    <string name="division">÷</string>
    <string name="suma">+</string>
    <string name="multiplicacion">×</string>
    <string name="resta">-</string>
    <string name="a_b_p">A . B . P</string>
    <string name="punto">,</string>
    <string name="nombre">Arturo B.P</string>
    <string name="copyright">© Copyright</string>
</resources>
